[package]
name = "minitiro"
version = "0.1.0"
edition = "2021"
authors = ["tiro"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="1.24.1", features=["full"]}
reqwest = { version="0.11.13", features=["json"] }
urlencoding = "2.1.2"
serde_json = "1.0.91"
serenity = "0.11.5"
songbird = { version = "0.3.0", features = ["builtin-queue"] }
dotenv = "0.15.0"